# stock-folio-coding-test

./: README.md  main.py  pyproject.toml  sqlite3.db
app/api/endpoints/: concat.py  download.py  info.py  process.py  trim.py  upload.py
app/core/: config.py  errors.py  timezone.py
app/db/: connection.py  session.py
app/models/: video.py  video_task.py
app/schemas/: video.py
app/services/: ffmpeg_service.py  video_service.py
app/utils/: ffmpeg_utils.py
