[tool.poetry]
name = "stock-folio-coding-test"
version = "0.1.0"
description = ""
authors = ["newsoft111 <ydj0617@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.32"
pymysql = "^1.1.1"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
